testsuite/tests/properties/invalid_n_propgate/bad_arity_1_0.lkt
import common

class BarNode: FooNode {
    @ignore_unused fun main_prop(): Equation =
        %propagate(node.ref_var, BazNode.prop1)
}
